versioned_docs/version-2025.2.1/professor/alvaro_jose_de_almeida_araujo.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Álvaro José de Almeida Araújo",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Gerenciadores de Conteúdo WEB - 1252",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        
        {
          "subject": "Desenvolvimento WEB Orientado a Objetos - 1237",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_a_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Informática Instrumental - 1532",
          "size": 2,
          "teachers": [
            "Samuel Stephan Milczuk",
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "EIN2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 1074",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Gerenciadores de Conteúdo WEB - 1252",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2023A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Prototipação de Interfaces e Interação Humano-Computador - 1251",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo",
            "Samuel Stephan Milczuk"
          ],
          "classroom": "Laboratório de Informatica B",
          "students": [
            "IIW2023A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Laboratório de Banco de Dados - 1238",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Desenvolvimento Responsivo e Otimização de Sites - 1249",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 1074",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Desenvolvimento Responsivo e Otimização de Sites - 1249",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos",
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2023A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Álvaro José de Almeida Araújo

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
